[package]
name = "bfv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint-dig = {version = "0.8.2", features = ["prime"]}
fhe-math = { path = "../fhe.rs/crates/fhe-math"   }
fhe-util = { path = "../fhe.rs/crates/fhe-util"   }
rand = "0.8.5"
ndarray = "0.15.6"
itertools = "0.10.5"
num-bigint = "0.4.3"
num-traits = "0.2.15"