[package]
name = "bfv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
num-bigint-dig = {version = "0.8.2", features = ["prime"]}
fhe-math = { git = "https://github.com/Janmajayamall/fhe.rs", branch = "compare" }
fhe-util = { git = "https://github.com/Janmajayamall/fhe.rs", branch = "compare" }
rand = "0.8.5"
ndarray = {version = "0.15.6"}
itertools = "0.10.5"
num-bigint = "0.4.3"
num-traits = "0.2.15"
crypto-bigint = "0.4.9"
rand_chacha = "0.3.1"
seq-macro = "0.3"
traits = {git = "https://github.com/Janmajayamall/bfv", branch="ntt-trait"}
hexl-rs = {git = "https://github.com/Janmajayamall/hexl-rs.git", optional = true}

[dev-dependencies]
criterion = "0.4"

[features]
hexl = ["hexl-rs"]

[[bench]]
name = "modulus"
harness = false

[[bench]]
name = "poly"
harness = false

[[bench]]
name = "bfv"
harness = false
